--- a/ITC 362/Week 2/GeoQuiz/app/src/main/res/layout/activity_main.xml
+++ b/ITC 362/Week 2/GeoQuiz/app/src/main/res/layout/activity_main.xml
@@ -9,9 +9,12 @@
     tools:context=".MainActivity">
 
     <TextView
+        android:id="@+id/question_textview"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Canberra is the captial of Australia" />
+        android:gravity="center"
+        android:text="@string/question_australia" />
+<!--        android:text="Canberra is the captial of Australia" -->
 
     <LinearLayout
         android:layout_width="wrap_content"
@@ -29,5 +32,11 @@
             android:layout_height="wrap_content"
             android:text="False" />
     </LinearLayout>
+
+    <Button
+        android:id="@+id/next_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/next_button" />
 
 </LinearLayout>
