--- a/ITC 362/Week 2/GeoQuiz/app/src/main/res/layout/activity_main.xml
+++ b/ITC 362/Week 2/GeoQuiz/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
@@ -31,16 +32,18 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="False" />
+
     </LinearLayout>
 
-    <Button
-        android:id="@+id/next_button"
-        android:layout_width="115dp"
-        android:layout_height="wrap_content"
-        android:text="@string/next_button"
-        app:icon="@drawable/baseline_arrow_right_24"
-        app:iconGravity="end"
-        />
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
 
-
+        <Button
+            android:id="@+id/next_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/next_button"
+                 />
+    </LinearLayout>
 </LinearLayout>
