--- a/ITC 362/Week 2/GeoQuiz/app/src/main/res/layout/activity_main.xml
+++ b/ITC 362/Week 2/GeoQuiz/app/src/main/res/layout/activity_main.xml
@@ -31,7 +31,8 @@
             android:id="@+id/False_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="False" />
+            android:text="False"
+            />
 
     </LinearLayout>
 
@@ -44,6 +45,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/next_button"
-                 />
+            app:icon="@drawable/baseline_arrow_right_24"
+            app:iconGravity="end"
+            />
     </LinearLayout>
 </LinearLayout>
